# NemuriU

./: .gitignore  .gitmodules  CMakeLists.txt  QUICKSTART.md  README.md  install.zsh
content/: ddlc_assets  demo.cvn  nekopara_demo.cvn
cvn/: .gitignore  .gitmodules  CMakeLists.txt  README.md
cvn/cvn-lsp/: .eslintrc.js  LICENSE.txt  NEOVIM.md  test-extension.js
cvn/cvn-lsp/server/: tsconfig.json
cvn/cvn-lsp/server/src/: parser.ts  validator.ts
cvn/cvn-lsp/src/: extension.ts
cvn/runtime/: main.c
cvn/samples/: main.cvn
cvn/samples/assets/: create_test_images.sh
cvn/src/engine/: api.h  audio.c  audio_stub.c  renderer.h  resource.c  resource.h  text.h
cvn/src/script/: cvn_parser.c  cvn_parser.h  parser_test.c
cvn_engine/cvn-lsp/: .gitignore  .vscodeignore  README.md  language-configuration.json  package.json  tsconfig.json
cvn_engine/cvn-lsp/server/src/: server.ts
cvn_engine/cvn-lsp/snippets/: cvn.json
cvn_engine/cvn-lsp/src/: tsconfig.json
cvn_engine/cvn-lsp/syntax/: cvn.tmLanguage.json
cvn_engine/docs/: PHASE1_SUMMARY.md
cvn_engine/include/: cvn.h  cvn_full.h
cvn_engine/src/: cvn_engine.c
cvn_engine/src/engine/: api.c  audio.h  log.h  renderer.c  resource.c  text.c  window.c  window.h
cvn_engine/src/script/: cvn_parser.c  cvn_parser.h
docs/: SUCCESS_SUMMARY.md  VSCODE_SETUP.md  WIIU_BUILD_ISSUES.md
src/: app.c  app.h  main.c  nekopara_demo.c  nekopara_demo.h  render.c  resources.c  resources.h  screen_manager.c  screen_manager.h  ui.c  ui.h  vn_character.c  vn_character.h  vn_engine.c  vn_engine.h  vn_scene.c  vn_scene.h  vn_script.c  vn_script.h
src/screens/: credits_screen.c  credits_screen.h  game_screen.c  game_screen.h  testing_screen.c  testing_screen.h  title_screen.c  title_screen.h
